GNOME Bugzilla – Bug 746928
Wrong date format in the new event popover
Last modified: 2017-04-17 18:20:40 UTC
When I click on a day in the month view, in the popover that appears there is "new event on ..." and the date is wrong (the month is before the day). The format needs to be translatable.
Created attachment 300878 [details] [review] window: mark date format string for new event popover for translation
Review of attachment 300878 [details] [review]: ::: src/gcal-window.c @@ +640,3 @@ + * this is the format string for representing a date consisting of a month name + * and a date of month. */ + e_utf8_strftime_fix_am_pm (start, 64, C_("event date format", "%B %d"), &tm_date); Looks fine to me (as a translator). Not sure the context is really needed though.
Review of attachment 300878 [details] [review]: Pushed. Commit adfffad.