window: mark date format string for new event popover for translation

https://bugzilla.gnome.org/show_bug.cgi?id=746928